--- a/index.html
+++ b/index.html
@@ -36,23 +36,31 @@
     <section class="fonctionnement">
 
         <h1>Fonctionnement</h1>
-        <div class="button">
-            <a>
-                <img />
-                <p>Choisissez un restaurant</p>
-            </a>
-        </div>
-        <div class="button">
-            <a>
-                <img />
-                <p>Composez votre menu</p>
-            </a>
-        </div>
-        <div class="button">
-            <a>
-                <img />
-                <p>Dégustez au restaurant</p>
-            </a>
+
+        <div class="fonctionnement-orga">
+
+            <div class="box fonctionnement-box">
+                <a href="#">
+                    <p class="fonctionnement-box-number">1</p>
+                    <span class="fonctionnement-box-icone"><i class="fas fa-mobile-alt"></i></span>
+                    <p class="fonctionnement-box-txt">Choisissez un restaurant</p>
+                </a>
+            </div>
+            <div class="box fonctionnement-box">
+                <a href="#">
+                    <p class="fonctionnement-box-number">2</p>
+                    <span class="fonctionnement-box-icone"><i class="fas fa-ellipsis-v"></i><i
+                            class="fas fa-bars"></i></span>
+                    <p class="fonctionnement-box-txt">Composez votre menu</p>
+                </a>
+            </div>
+            <div class="box fonctionnement-box">
+                <a href="#">
+                    <p class="fonctionnement-box-number">3</p>
+                    <span class="fonctionnement-box-icone"><i class="fas fa-store"></i></span>
+                    <p class="fonctionnement-box-txt">Dégustez au restaurant</p>
+                </a>
+            </div>
         </div>
 
     </section>
@@ -61,87 +69,93 @@
 
         <h1>Restaurants</h1>
 
-        <ul>
-            <li class="restaurants-orga-card">
-                <a href="#">
-                    <img class="restaurants-orga-card-image1" src="./images/restaurants/la-palette-du-gout.jpg"
-                        alt="La palette du goût" />
-                    <span>Nouveau</span>
-                    <div class="restaurants-orga-card-texte">
-                        <div>
-                            <h2>La palette du goût</h2>
-                            <p>Ménilmontant</p>
-                        </div>
-                        <div class="heart">
-                            <i class="far fa-heart"></i>
-                        </div>
-                    </div>
-                </a>
-            </li>
+        <div class="restaurants-orga">
 
-            <li class="restaurants-orga-card">
-                <a href="#">
-                    <img class="restaurants-orga-card-image2" src="./images/restaurants/La-note-enchantee.jpg"
-                        alt="La note enchantée" />
-                    <span>Nouveau</span>
-                    <div class="restaurants-orga-card-texte">
-                        <div>
-                            <h2>La note enchantée</h2>
-                            <p>Charonne</p>
+            <ul>
+                <li class="restaurants-orga-card box">
+                    <a href="#">
+                        <img class="restaurants-orga-card-image1"
+                            src="./Maquettes_Ohmyfood/images/restaurants/la-palette-du-gout.jpg"
+                            alt="La palette du goût" />
+                        <span>Nouveau</span>
+                        <div class="restaurants-orga-card-texte">
+                            <div>
+                                <h2>La palette du goût</h2>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
-                        <div class="heart">
-                            <i class="far fa-heart"></i>
-                        </div>
-                    </div>
-                </a>
-            </li>
+                    </a>
+                </li>
 
-            <li class="restaurants-orga-card">
-                <a href="#">
-                    <img class="restaurants-orga-card-image" src="./images/restaurants/a-la-francaise.jpg"
-                        alt="A la française" />
-                    <div class="restaurants-orga-card-texte">
-                        <div>
-                            <h2>A la française</h2>
-                            <p>Cité Rouge</p>
+                <li class="restaurants-orga-card box">
+                    <a href="#">
+                        <img class="restaurants-orga-card-image2"
+                            src="./Maquettes_Ohmyfood/images/restaurants/La-note-enchantee.jpg"
+                            alt="La note enchantée" />
+                        <span>Nouveau</span>
+                        <div class="restaurants-orga-card-texte">
+                            <div>
+                                <h2>La note enchantée</h2>
+                                <p>Charonne</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
-                        <div class="heart">
-                            <i class="far fa-heart"></i>
-                        </div>
-                    </div>
-                </a>
-            </li>
+                    </a>
+                </li>
 
-            <li class="restaurants-orga-card">
-                <a href="#">
-                    <img class="restaurants-orga-card-image" src="./images/restaurants/le-delice-des-sens.jpg"
-                        alt="Le délice des sens" />
-                    <div class="restaurants-orga-card-texte">
-                        <div>
-                            <h2>Le délice des sens</h2>
-                            <p>Folie-Méricourt</p>
+                <li class="restaurants-orga-card box">
+                    <a href="#">
+                        <img class="restaurants-orga-card-image"
+                            src="./Maquettes_Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="A la française" />
+                        <div class="restaurants-orga-card-texte">
+                            <div>
+                                <h2>A la française</h2>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
-                        <div class="heart">
-                            <i class="far fa-heart"></i>
+                    </a>
+                </li>
+
+                <li class="restaurants-orga-card box">
+                    <a href="#">
+                        <img class="restaurants-orga-card-image"
+                            src="./Maquettes_Ohmyfood/images/restaurants/le-delice-des-sens.jpg"
+                            alt="Le délice des sens" />
+                        <div class="restaurants-orga-card-texte">
+                            <div>
+                                <h2>Le délice des sens</h2>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <div class="heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </li>
-        </ul>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </section>
 
-    <footer>
-        <div class="header-logo">
-            <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
+    <footer class="footer">
+        <div class="footer-logo">
+            <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
         </div>
 
-        <div>
-            <i class="fas fa-#"></i>
+        <div class="footer-info">
+            <span><i class="fas fa-utensils"></i></span>
             <p>Proposer un restaurant</p>
         </div>
 
-        <div>
-            <i class="fas fa-#"></i>
+        <div class="footer-info">
+            <span><i class="fas fa-hands-helping"></i></span>
             <p>Devenir partenaire</p>
         </div>
 
