--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/sass/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <script defer src="fontawesome/css/all.css"></script>
@@ -17,7 +17,7 @@
 
     <header>
         <div class="header-logo">
-            <img src="/Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
+            <img src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
         </div>
 
         <form class="formulaire">
