--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
         <div class="header-logo">
             <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
         </div>
-
-        <form class="formulaire">
-            <span class="formulaire-localisation"><i class="fas fa-map-marker-alt"></i></span>
-            <input class="formulaire-recherche" type="text" value="" placeholder="Paris, Belleville" />
-        </form>
-
-        <section class="reservation">
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <button>Explorer nos restaurants</button>
-        </section>
-
     </header>
+
+    <form class="formulaire">
+        <span class="formulaire-localisation"><i class="fas fa-map-marker-alt"></i></span>
+        <input class="formulaire-recherche" type="text" value="" placeholder="Paris, Belleville" />
+    </form>
+
+    <section class="reservation">
+        <h1>Réservez le menu qui</br> vous convient</h1>
+        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+        <button>Explorer nos restaurants</button>
+    </section>
+
+    
 
     <section class="fonctionnement">
 
@@ -83,9 +84,16 @@
                                 <h2>La palette du goût</h2>
                                 <p>Ménilmontant</p>
                             </div>
+
                             <div class="heart">
-                                <i class="far fa-heart"></i>
+                                <div>
+                                    <span class="heart-vacuum"><i class="far fa-heart"></i></span>
+                                </div>
+                                <div>
+                                    <span class="heart-filled"></span><i class="far fa-heart"></i></span>
+                                </div>
                             </div>
+
                         </div>
                     </a>
                 </li>
