--- a/index.html
+++ b/index.html
@@ -75,24 +75,28 @@
             <ul>
                 <li class="restaurants-orga-card box">
                     <a href="#">
-                        <img class="restaurants-orga-card-image1"
-                            src="./images/restaurants/la-palette-du-gout.jpg"
-                            alt="La palette du goût" />
-                        <span>Nouveau</span>
+
+                        <div class="img-new">
+                            <span>Nouveau</span>
+                            <img class="restaurants-orga-card-image1"
+                                src="./images/restaurants/la-palette-du-gout.jpg"
+                                alt="La palette du goût" />
+                        </div>
+
                         <div class="restaurants-orga-card-texte">
                             <div>
                                 <h2>La palette du goût</h2>
                                 <p>Ménilmontant</p>
                             </div>
 
-                            <div class="heart">
+                            <!-- <div class="heart">
                                 <div>
                                     <span class="heart-vacuum"><i class="far fa-heart"></i></span>
                                 </div>
                                 <div>
                                     <span class="heart-filled"></span><i class="far fa-heart"></i></span>
                                 </div>
-                            </div>
+                            </div> -->
 
                         </div>
                     </a>
@@ -100,10 +104,14 @@
 
                 <li class="restaurants-orga-card box">
                     <a href="#">
-                        <img class="restaurants-orga-card-image2"
-                            src="./images/restaurants/La-note-enchantee.jpg"
-                            alt="La note enchantée" />
-                        <span>Nouveau</span>
+
+                        <div class="img-new">
+                            <span>Nouveau</span>
+                            <img class="restaurants-orga-card-image2"
+                                src="./images/restaurants/La-note-enchantee.jpg"
+                                alt="La note enchantée" />
+                        </div>
+                        
                         <div class="restaurants-orga-card-texte">
                             <div>
                                 <h2>La note enchantée</h2>
