--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="restaurants-orga">
 
             <ul>
-                <li class="restaurants-orga-card box">
-                    <a href="#">
+                <li class="box">
+                    <a class="restaurants-orga-card" href="#">
 
                         <div class="img-new">
                             <span>Nouveau</span>
@@ -102,8 +102,8 @@
                     </a>
                 </li>
 
-                <li class="restaurants-orga-card box">
-                    <a href="#">
+                <li class="box">
+                    <a class="restaurants-orga-card" href="#">
 
                         <div class="img-new">
                             <span>Nouveau</span>
@@ -124,8 +124,8 @@
                     </a>
                 </li>
 
-                <li class="restaurants-orga-card box">
-                    <a href="#">
+                <li class="box">
+                    <a class="restaurants-orga-card" href="#">
                         <img class="restaurants-orga-card-image"
                             src="./images/restaurants/a-la-francaise.jpg"
                             alt="A la française" />
@@ -141,8 +141,8 @@
                     </a>
                 </li>
 
-                <li class="restaurants-orga-card box">
-                    <a href="#">
+                <li class="box">
+                    <a class="restaurants-orga-card" href="#">
                         <img class="restaurants-orga-card-image"
                             src="./images/restaurants/le-delice-des-sens.jpg"
                             alt="Le délice des sens" />
