palette du goût 1

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -21,7 +21,7 @@
         </div>
     </header>
 
-    <section class="img">
+    <section class="banniere-img">
         <img src="./images/restaurants/la-palette-du-gout.jpg"/>
     </section>
 
@@ -101,7 +101,7 @@
 
         <div class="desserts">
 
-            <h4>Désserts</h4>
+            <h4>Desserts</h4>
 
             <div class="box">
                 <div>
@@ -129,13 +129,43 @@
 
         </div>
 
+        <button>Commander</button>
 
     </section>
 
+    <footer class="footer">
+        <div class="footer-logo">
+            <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
+        </div>
 
+        <div class="footer-info">
+            <span><i class="fas fa-utensils"></i></span>
+            <p>Proposer un restaurant</p>
+        </div>
 
+        <div class="footer-info">
+            <span><i class="fas fa-hands-helping"></i></span>
+            <p>Devenir partenaire</p>
+        </div>
 
+        <div>
+            <p>Mentions légales</p>
+        </div>
 
+        <div>
+            <p>Contact</p>
+        </div>
+
+    </footer>
 
 
 </body>
+
+</html>
+
+
+
+
+
+
+
