--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -39,28 +39,28 @@
             </div>
         </div>
 
-        <div class="entees">
+        <div class="entrees">
 
             <h4>Entrées</h4>
 
             <div class="box">
-                <div>
+                <div class="entrees-description">
                     Fricassée d'escargot
                     Au piment d'Espelette 
                 </div>
                 <div>25€</div>
             </div>
 
-            <div class="box">
-                <div>
-                    Foie gras de canard mi-cuit
-                    Et ses copeaux de truffe noire
+            <div class="box card">
+                <div class="entrees-description">
+                    <p class="bold">Foie gras de canard mi-cuit</p>
+                    <p>Et ses copeaux de truffe noire</p>
                 </div>
                 <div>35€</div>
             </div>
 
             <div class="box">
-                <div>
+                <div class="entrees-description">
                     Oeuf au plat
                     Assaisonné à la truffe sur lit de caviar
                 </div>
@@ -153,7 +153,7 @@
         </div>
 
         <div>
-            <p>Contact</p>
+            <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
         </div>
 
     </footer>
