palette du gout 3

--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -15,7 +15,11 @@
 
 <body>
 
-    <header>
+    <header class="header-resto">
+        <div class="header-arrow">
+            <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+        </div>
+
         <div class="header-logo">
             <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
         </div>
@@ -53,10 +57,12 @@
 
             <div class="box card">
                 <div class="entrees-description">
-                    <p class="bold">Foie gras de canard mi-cuit</p>
-                    <p>Et ses copeaux de truffe noire</p>
+                    <p><b>Foie gras de canard mi-cuit</b></p>
                 </div>
-                <div>35€</div>
+                <div class="entrees-price">
+                    <p>Et ses copeaux de truffe noire</p>
+                    <p><b>35€</b></p>
+                </div>
             </div>
 
             <div class="box">
@@ -129,7 +135,9 @@
 
         </div>
 
-        <button>Commander</button>
+        <div class="button">
+            <button>Commander</button>
+        </div>
 
     </section>
 
