--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <header>
+    <header class="header-accueil">
         <div class="header-logo">
             <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
         </div>
