mise en place des liens

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <ul>
                 <li class="box">
-                    <a class="restaurants-orga-card" href="#">
+                    <a class="restaurants-orga-card" href="./la_palette_du_gout.html">
 
                         <div class="img-new">
                             <span>Nouveau</span>
