--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -47,30 +47,34 @@
 
             <h4>Entrées</h4>
 
-            <div class="box">
-                <div class="entrees-description">
-                    Fricassée d'escargot
-                    Au piment d'Espelette 
+            <div class="box card">
+                <div class="card-description">
+                    <p><b>Fricassée d'escargot</b></p>
                 </div>
-                <div>25€</div>
+                <div class="card-price">
+                    <p>Au piment d'Espelette</p>
+                    <p><b>25€</b></p>
+                </div>
             </div>
 
             <div class="box card">
-                <div class="entrees-description">
+                <div class="card-description">
                     <p><b>Foie gras de canard mi-cuit</b></p>
                 </div>
-                <div class="entrees-price">
+                <div class="card-price">
                     <p>Et ses copeaux de truffe noire</p>
                     <p><b>35€</b></p>
                 </div>
             </div>
 
-            <div class="box">
-                <div class="entrees-description">
-                    Oeuf au plat
-                    Assaisonné à la truffe sur lit de caviar
+            <div class="box card">
+                <div class="card-description">
+                    <p><b>Oeuf au plat</b></p>
                 </div>
-                <div>20€</div>
+                <div class="card-price">
+                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <p><b>20€</b></p>
+                </div>
             </div>
 
         </div>
@@ -79,28 +83,34 @@
 
             <h4>Plats</h4>
 
-            <div class="box">
-                <div>
-                    Filet de boeuf aux herbes
-                    Accompagné de sa ribambelle de légumes
+            <div class="box card">
+                <div class="card-description">
+                    <p><b>Filet de boeuf aux herbes</b></p>
                 </div>
-                <div>40€</div>
+                <div class="card-price">
+                    <p>Accompagné de sa ribambelle de légumes</p>
+                    <p><b>40€</b></p>
+                </div>
             </div> 
 
-            <div class="box">
-                <div>
-                    Parmentier de queue de boeuf
-                    À la truffe noire sur sa purée de panais
+            <div class="box card">
+                <div class="card-description">
+                    <p><b>Parmentier de queue de boeuf</b></p>
                 </div>
-                <div>35€</div>
+                <div class="card-price">
+                    <p>À la truffe noire sur sa purée de panais</p>
+                    <p><b>35€</b></p>
+                </div>
             </div> 
 
-            <div class="box">
-                <div>
-                    Filet de turbot
-                    Aux agrumes
+            <div class="box card">
+                <div class="card-description">
+                    <p><b>Filet de turbot</b></p>
                 </div>
-                <div>44€</div>
+                <div class="card-price">
+                    <p>Aux agrumes</p>
+                    <p><b>44€</b></p>
+                </div>
             </div>
 
         </div>
@@ -109,28 +119,34 @@
 
             <h4>Desserts</h4>
 
-            <div class="box">
-                <div>
-                    Paris-Brest
-                    Revisité
+            <div class="box card">
+                <div class="card-description">
+                    <p><b>Paris-Brest</b></p>
                 </div>
-                <div>18€</div>
+                <div class="card-price">
+                    <p>Revisité</p>
+                    <p><b>18€</b></p>
+                </div>
             </div> 
 
-            <div class="box">
-                <div>
-                    Macaron au chocolat d'exception 
-                    Et glace à la vanille de Madagascar
+            <div class="box card">
+                <div class="card-description">
+                   <p><b>Macaron au chocolat d'exception</b></p>
                 </div>
-                <div>22€</div>
+                <div class="card-price">
+                    <p>Et glace à la vanille de Madagascar</p>
+                    <p><b>22€</b></p>
+                </div>
             </div> 
 
-            <div class="box">
-                <div>
-                    Mousse au chocolat 
-                    Au piment d'Espelette et à la truffe noire
+            <div class="box card">
+                <div class="card-description">
+                    <p><b>Mousse au chocolat</b></p>
                 </div>
-                <div>23€</div>
+                <div class="card-price">
+                    <p>Au piment d'Espelette et à la truffe noire</p>
+                    <p><b>23€</b></p>
+                </div>
             </div>
 
         </div>
