--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -45,7 +45,7 @@
 
         <div class="entrees">
 
-            <h4>Entrées</h4>
+            <h4><span>Entr</span>ées</h4>
 
             <div class="box card">
                 <div class="card-description">
@@ -81,7 +81,7 @@
 
         <div class="plats">
 
-            <h4>Plats</h4>
+            <h4><span>Plat</span>s</h4>
 
             <div class="box card">
                 <div class="card-description">
@@ -117,7 +117,7 @@
 
         <div class="desserts">
 
-            <h4>Desserts</h4>
+            <h4><span>Dess</span>erts</h4>
 
             <div class="box card">
                 <div class="card-description">
