--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -152,7 +152,7 @@
         </div>
 
         <div class="button">
-            <button>Commander</button>
+            <button class="button-com">Commander</button>
         </div>
 
     </section>
