--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -47,33 +47,36 @@
 
             <h4><span>Entr</span>ées</h4>
 
-            <div class="box card">
-                <div class="card-description">
-                    <p><b>Fricassée d'escargot</b></p>
-                </div>
-                <div class="card-price">
-                    <p>Au piment d'Espelette</p>
-                    <p><b>25€</b></p>
-                </div>
-            </div>
+            <div class="entrees-animation">
 
-            <div class="box card">
-                <div class="card-description">
-                    <p><b>Foie gras de canard mi-cuit</b></p>
+                <div class="box card">
+                    <div class="card-description">
+                        <p><b>Fricassée d'escargot</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>Au piment d'Espelette</p>
+                        <p><b>25€</b></p>
+                    </div>
                 </div>
-                <div class="card-price">
-                    <p>Et ses copeaux de truffe noire</p>
-                    <p><b>35€</b></p>
-                </div>
-            </div>
 
-            <div class="box card">
-                <div class="card-description">
-                    <p><b>Oeuf au plat</b></p>
+                <div class="box card">
+                    <div class="card-description">
+                        <p><b>Foie gras de canard mi-cuit</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>Et ses copeaux de truffe noire</p>
+                        <p><b>35€</b></p>
+                    </div>
                 </div>
-                <div class="card-price">
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                    <p><b>20€</b></p>
+
+                <div class="box card">
+                    <div class="card-description">
+                        <p><b>Oeuf au plat</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p><b>20€</b></p>
+                    </div>
                 </div>
             </div>
 
@@ -83,33 +86,36 @@
 
             <h4><span>Plat</span>s</h4>
 
-            <div class="box card">
-                <div class="card-description">
-                    <p><b>Filet de boeuf aux herbes</b></p>
-                </div>
-                <div class="card-price">
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                    <p><b>40€</b></p>
-                </div>
-            </div> 
+            <div class="plats-animation">
 
-            <div class="box card">
-                <div class="card-description">
-                    <p><b>Parmentier de queue de boeuf</b></p>
-                </div>
-                <div class="card-price">
-                    <p>À la truffe noire sur sa purée de panais</p>
-                    <p><b>35€</b></p>
-                </div>
-            </div> 
+                <div class="box card">
+                    <div class="card-description">
+                        <p><b>Filet de boeuf aux herbes</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <p><b>40€</b></p>
+                    </div>
+                </div> 
 
-            <div class="box card">
-                <div class="card-description">
-                    <p><b>Filet de turbot</b></p>
-                </div>
-                <div class="card-price">
-                    <p>Aux agrumes</p>
-                    <p><b>44€</b></p>
+                <div class="box card">
+                    <div class="card-description">
+                        <p><b>Parmentier de queue de boeuf</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>À la truffe noire sur sa purée de panais</p>
+                        <p><b>35€</b></p>
+                    </div>
+                </div> 
+
+                <div class="box card">
+                    <div class="card-description">
+                        <p><b>Filet de turbot</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>Aux agrumes</p>
+                        <p><b>44€</b></p>
+                    </div>
                 </div>
             </div>
 
@@ -119,33 +125,36 @@
 
             <h4><span>Dess</span>erts</h4>
 
-            <div class="box card">
-                <div class="card-description">
-                    <p><b>Paris-Brest</b></p>
-                </div>
-                <div class="card-price">
-                    <p>Revisité</p>
-                    <p><b>18€</b></p>
-                </div>
-            </div> 
+            <div class="desserts-animation">
 
-            <div class="box card">
-                <div class="card-description">
-                   <p><b>Macaron au chocolat d'exception</b></p>
-                </div>
-                <div class="card-price">
-                    <p>Et glace à la vanille de Madagascar</p>
-                    <p><b>22€</b></p>
-                </div>
-            </div> 
+                <div class="box card">
+                    <div class="card-description">
+                        <p><b>Paris-Brest</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>Revisité</p>
+                        <p><b>18€</b></p>
+                    </div>
+                </div> 
 
-            <div class="box card">
-                <div class="card-description">
-                    <p><b>Mousse au chocolat</b></p>
-                </div>
-                <div class="card-price">
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                    <p><b>23€</b></p>
+                <div class="box card">
+                    <div class="card-description">
+                    <p><b>Macaron au chocolat d'exception</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>Et glace à la vanille de Madagascar</p>
+                        <p><b>22€</b></p>
+                    </div>
+                </div> 
+
+                <div class="box card">
+                    <div class="card-description">
+                        <p><b>Mousse au chocolat</b></p>
+                    </div>
+                    <div class="card-price">
+                        <p>Au piment d'Espelette et à la truffe noire</p>
+                        <p><b>23€</b></p>
+                    </div>
                 </div>
             </div>
 
