--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 <body>
 
+    <div class="spinner">
+        
+    </div>
+
     <header class="header-accueil">
         <div class="header-logo">
             <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
