animation sur les boutons principaux

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
 
     <div class="spinner">
-        
     </div>
 
     <header class="header-accueil">
@@ -33,7 +32,7 @@
     <section class="reservation">
         <h1>Réservez le menu qui</br> vous convient</h1>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <button>Explorer nos restaurants</button>
+        <a><button>Explorer nos restaurants</button></a>
     </section>
 
     
@@ -185,7 +184,7 @@
         </div>
 
         <div>
-            <p>Contact</p>
+            <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
         </div>
 
     </footer>
