--- a/index.html
+++ b/index.html
@@ -18,176 +18,180 @@
     <div class="spinner">
     </div>
 
-    <header class="header-accueil">
-        <div class="header-logo">
-            <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
-        </div>
-    </header>
+    <div class="le-reste-du-monde">
 
-    <form class="formulaire">
-        <span class="formulaire-localisation"><i class="fas fa-map-marker-alt"></i></span>
-        <input class="formulaire-recherche" type="text" value="" placeholder="Paris, Belleville" />
-    </form>
-
-    <section class="reservation">
-        <h1>Réservez le menu qui</br> vous convient</h1>
-        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <a><button>Explorer nos restaurants</button></a>
-    </section>
-
-    
-
-    <section class="fonctionnement">
-
-        <h1>Fonctionnement</h1>
-
-        <div class="fonctionnement-orga">
-
-            <div class="box fonctionnement-box">
-                <a href="#">
-                    <p class="fonctionnement-box-number">1</p>
-                    <span class="fonctionnement-box-icone"><i class="fas fa-mobile-alt"></i></span>
-                    <p class="fonctionnement-box-txt">Choisissez un restaurant</p>
-                </a>
+        <header class="header-accueil">
+            <div class="header-logo">
+                <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
             </div>
-            <div class="box fonctionnement-box">
-                <a href="#">
-                    <p class="fonctionnement-box-number">2</p>
-                    <span class="fonctionnement-box-icone"><i class="fas fa-ellipsis-v"></i><i
-                            class="fas fa-bars"></i></span>
-                    <p class="fonctionnement-box-txt">Composez votre menu</p>
-                </a>
+        </header>
+
+        <form class="formulaire">
+            <span class="formulaire-localisation"><i class="fas fa-map-marker-alt"></i></span>
+            <input class="formulaire-recherche" type="text" value="" placeholder="Paris, Belleville" />
+        </form>
+
+        <section class="reservation">
+            <h1>Réservez le menu qui</br> vous convient</h1>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <a><button>Explorer nos restaurants</button></a>
+        </section>
+
+        
+
+        <section class="fonctionnement">
+
+            <h1>Fonctionnement</h1>
+
+            <div class="fonctionnement-orga">
+
+                <div class="box fonctionnement-box">
+                    <a href="#">
+                        <p class="fonctionnement-box-number">1</p>
+                        <span class="fonctionnement-box-icone"><i class="fas fa-mobile-alt"></i></span>
+                        <p class="fonctionnement-box-txt">Choisissez un restaurant</p>
+                    </a>
+                </div>
+                <div class="box fonctionnement-box">
+                    <a href="#">
+                        <p class="fonctionnement-box-number">2</p>
+                        <span class="fonctionnement-box-icone"><i class="fas fa-ellipsis-v"></i><i
+                                class="fas fa-bars"></i></span>
+                        <p class="fonctionnement-box-txt">Composez votre menu</p>
+                    </a>
+                </div>
+                <div class="box fonctionnement-box">
+                    <a href="#">
+                        <p class="fonctionnement-box-number">3</p>
+                        <span class="fonctionnement-box-icone"><i class="fas fa-store"></i></span>
+                        <p class="fonctionnement-box-txt">Dégustez au restaurant</p>
+                    </a>
+                </div>
             </div>
-            <div class="box fonctionnement-box">
-                <a href="#">
-                    <p class="fonctionnement-box-number">3</p>
-                    <span class="fonctionnement-box-icone"><i class="fas fa-store"></i></span>
-                    <p class="fonctionnement-box-txt">Dégustez au restaurant</p>
-                </a>
-            </div>
-        </div>
 
-    </section>
+        </section>
 
-    <section class="restaurants">
+        <section class="restaurants">
 
-        <h1>Restaurants</h1>
+            <h1>Restaurants</h1>
 
-        <div class="restaurants-orga">
+            <div class="restaurants-orga">
 
-            <ul>
-                <li class="box">
-                    <a class="restaurants-orga-card" href="./la_palette_du_gout.html">
+                <ul>
+                    <li class="box">
+                        <a class="restaurants-orga-card" href="./la_palette_du_gout.html">
 
-                        <div class="img-new">
-                            <span>Nouveau</span>
-                            <img class="restaurants-orga-card-image1"
-                                src="./images/restaurants/la-palette-du-gout.jpg"
-                                alt="La palette du goût" />
-                        </div>
-
-                        <div class="restaurants-orga-card-texte">
-                            <div>
-                                <h2>La palette du goût</h2>
-                                <p>Ménilmontant</p>
+                            <div class="img-new">
+                                <span>Nouveau</span>
+                                <img class="restaurants-orga-card-image1"
+                                    src="./images/restaurants/la-palette-du-gout.jpg"
+                                    alt="La palette du goût" />
                             </div>
 
-                            <!-- <div class="heart">
+                            <div class="restaurants-orga-card-texte">
                                 <div>
-                                    <span class="heart-vacuum"><i class="far fa-heart"></i></span>
+                                    <h2>La palette du goût</h2>
+                                    <p>Ménilmontant</p>
                                 </div>
+
+                                <!-- <div class="heart">
+                                    <div>
+                                        <span class="heart-vacuum"><i class="far fa-heart"></i></span>
+                                    </div>
+                                    <div>
+                                        <span class="heart-filled"></span><i class="far fa-heart"></i></span>
+                                    </div>
+                                </div> -->
+
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="box">
+                        <a class="restaurants-orga-card" href="#">
+
+                            <div class="img-new">
+                                <span>Nouveau</span>
+                                <img class="restaurants-orga-card-image2"
+                                    src="./images/restaurants/La-note-enchantee.jpg"
+                                    alt="La note enchantée" />
+                            </div>
+
+                            <div class="restaurants-orga-card-texte">
                                 <div>
-                                    <span class="heart-filled"></span><i class="far fa-heart"></i></span>
+                                    <h2>La note enchantée</h2>
+                                    <p>Charonne</p>
                                 </div>
-                            </div> -->
-
-                        </div>
-                    </a>
-                </li>
-
-                <li class="box">
-                    <a class="restaurants-orga-card" href="#">
-
-                        <div class="img-new">
-                            <span>Nouveau</span>
-                            <img class="restaurants-orga-card-image2"
-                                src="./images/restaurants/La-note-enchantee.jpg"
-                                alt="La note enchantée" />
-                        </div>
-
-                        <div class="restaurants-orga-card-texte">
-                            <div>
-                                <h2>La note enchantée</h2>
-                                <p>Charonne</p>
+                                <div class="heart">
+                                    <i class="far fa-heart"></i>
+                                </div>
                             </div>
-                            <div class="heart">
-                                <i class="far fa-heart"></i>
+                        </a>
+                    </li>
+
+                    <li class="box">
+                        <a class="restaurants-orga-card" href="#">
+                            <img class="restaurants-orga-card-image"
+                                src="./images/restaurants/a-la-francaise.jpg"
+                                alt="A la française" />
+                            <div class="restaurants-orga-card-texte">
+                                <div>
+                                    <h2>A la française</h2>
+                                    <p>Cité Rouge</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="far fa-heart"></i>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </li>
+                        </a>
+                    </li>
 
-                <li class="box">
-                    <a class="restaurants-orga-card" href="#">
-                        <img class="restaurants-orga-card-image"
-                            src="./images/restaurants/a-la-francaise.jpg"
-                            alt="A la française" />
-                        <div class="restaurants-orga-card-texte">
-                            <div>
-                                <h2>A la française</h2>
-                                <p>Cité Rouge</p>
+                    <li class="box">
+                        <a class="restaurants-orga-card" href="#">
+                            <img class="restaurants-orga-card-image"
+                                src="./images/restaurants/le-delice-des-sens.jpg"
+                                alt="Le délice des sens" />
+                            <div class="restaurants-orga-card-texte">
+                                <div>
+                                    <h2>Le délice des sens</h2>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="far fa-heart"></i>
+                                </div>
                             </div>
-                            <div class="heart">
-                                <i class="far fa-heart"></i>
-                            </div>
-                        </div>
-                    </a>
-                </li>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
 
-                <li class="box">
-                    <a class="restaurants-orga-card" href="#">
-                        <img class="restaurants-orga-card-image"
-                            src="./images/restaurants/le-delice-des-sens.jpg"
-                            alt="Le délice des sens" />
-                        <div class="restaurants-orga-card-texte">
-                            <div>
-                                <h2>Le délice des sens</h2>
-                                <p>Folie-Méricourt</p>
-                            </div>
-                            <div class="heart">
-                                <i class="far fa-heart"></i>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </section>
+        <footer class="footer">
+            <div class="footer-logo">
+                <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
+            </div>
 
-    <footer class="footer">
-        <div class="footer-logo">
-            <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
-        </div>
+            <div class="footer-info">
+                <span><i class="fas fa-utensils"></i></span>
+                <p>Proposer un restaurant</p>
+            </div>
 
-        <div class="footer-info">
-            <span><i class="fas fa-utensils"></i></span>
-            <p>Proposer un restaurant</p>
-        </div>
+            <div class="footer-info">
+                <span><i class="fas fa-hands-helping"></i></span>
+                <p>Devenir partenaire</p>
+            </div>
 
-        <div class="footer-info">
-            <span><i class="fas fa-hands-helping"></i></span>
-            <p>Devenir partenaire</p>
-        </div>
+            <div>
+                <p>Mentions légales</p>
+            </div>
 
-        <div>
-            <p>Mentions légales</p>
-        </div>
+            <div>
+                <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+            </div>
 
-        <div>
-            <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
-        </div>
+        </footer>
 
-    </footer>
+    </div>
 
 
 </body>
