--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -45,19 +45,29 @@
 
         <div class="entrees">
 
-            <h4><span>Entr</span>ées</h4>
+            <h4>Entrées</h4>
 
             <div class="entrees-animation">
 
-                <div class="box card">
-                    <div class="card-description">
-                        <p><b>Fricassée d'escargot</b></p>
-                    </div>
-                    <div class="card-price">
-                        <p>Au piment d'Espelette</p>
-                        <p><b>25€</b></p>
-                    </div>
+                <div class="card-animation>">
+                    <a href="#" >
+
+                        <div class="box card">                        
+                            <div class="card-description">
+                                <h5>Fricassée d'escargot</h5>
+                                <p>Au piment d'Espelette</p>
+                            </div>
+                            <span class="card-price">25€</span>
+                
+                            <div class="card-check">
+                                <span><i class="fas fa-check"></i></span>
+                            </div>
+                        </div> 
+
+                    </a>
                 </div>
+
+                <!-- Fin animation -->
 
                 <div class="box card">
                     <div class="card-description">
