animation des coches sur les cartes menu

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <a class="restaurants-orga-card" href="./la_palette_du_gout.html">
 
                             <div class="img-new">
-                                <span>Nouveau</span>
+                                <div class="new">Nouveau</div>
                                 <img class="restaurants-orga-card-image1"
                                     src="./images/restaurants/la-palette-du-gout.jpg"
                                     alt="La palette du goût" />
@@ -94,14 +94,10 @@
                                     <p>Ménilmontant</p>
                                 </div>
 
-                                <!-- <div class="heart">
-                                    <div>
-                                        <span class="heart-vacuum"><i class="far fa-heart"></i></span>
-                                    </div>
-                                    <div>
-                                        <span class="heart-filled"></span><i class="far fa-heart"></i></span>
-                                    </div>
-                                </div> -->
+                                <div class="heart">
+                                    <span class="heart-vacuum"><i class="far fa-heart"></i></span>
+                                    <div class="heart-filled"><i class="fas fa-heart"></i></div>
+                                </div>
 
                             </div>
                         </a>
@@ -111,7 +107,7 @@
                         <a class="restaurants-orga-card" href="#">
 
                             <div class="img-new">
-                                <span>Nouveau</span>
+                                <div class="new">Nouveau</div>
                                 <img class="restaurants-orga-card-image2"
                                     src="./images/restaurants/La-note-enchantee.jpg"
                                     alt="La note enchantée" />
