animation des coeurs

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                                 <div class="heart">
                                     <span class="heart-vacuum"><i class="far fa-heart"></i></span>
-                                    <div class="heart-filled"><i class="fas fa-heart"></i></div>
+                                    <span class="heart-filled"><i class="fas fa-heart"></i></span>
                                 </div>
 
                             </div>
