finalisation animation des coches sur les cartes menu

--- a/index.html
+++ b/index.html
@@ -118,9 +118,12 @@
                                     <h2>La note enchantée</h2>
                                     <p>Charonne</p>
                                 </div>
+
                                 <div class="heart">
-                                    <i class="far fa-heart"></i>
+                                    <span class="heart-vacuum"><i class="far fa-heart"></i></span>
+                                    <span class="heart-filled"><i class="fas fa-heart"></i></span>
                                 </div>
+
                             </div>
                         </a>
                     </li>
@@ -135,9 +138,12 @@
                                     <h2>A la française</h2>
                                     <p>Cité Rouge</p>
                                 </div>
+
                                 <div class="heart">
-                                    <i class="far fa-heart"></i>
+                                    <span class="heart-vacuum"><i class="far fa-heart"></i></span>
+                                    <span class="heart-filled"><i class="fas fa-heart"></i></span>
                                 </div>
+
                             </div>
                         </a>
                     </li>
@@ -152,9 +158,12 @@
                                     <h2>Le délice des sens</h2>
                                     <p>Folie-Méricourt</p>
                                 </div>
+
                                 <div class="heart">
-                                    <i class="far fa-heart"></i>
-                                </div>
+                                    <span class="heart-vacuum"><i class="far fa-heart"></i></span>
+                                    <span class="heart-filled"><i class="fas fa-heart"></i></span>
+                                </div>  
+
                             </div>
                         </a>
                     </li>
