--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants-orga-card" href="#">
+                        <a class="restaurants-orga-card" href="./la-note-enchantee.html">
 
                             <div class="img-new">
                                 <div class="new">Nouveau</div>
@@ -129,7 +129,7 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants-orga-card" href="#">
+                        <a class="restaurants-orga-card" href="./a-la francaise.html">
                             <img class="restaurants-orga-card-image"
                                 src="./images/restaurants/a-la-francaise.jpg"
                                 alt="A la française" />
@@ -149,7 +149,7 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants-orga-card" href="#">
+                        <a class="restaurants-orga-card" href="./le-delice-des-sens.html">
                             <img class="restaurants-orga-card-image"
                                 src="./images/restaurants/le-delice-des-sens.jpg"
                                 alt="Le délice des sens" />
