mise en place du lien de la page la palette du goût - essai 2

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <ul>
                     <li class="box">
-                        <div class="restaurants-orga-card" href="./la_palette_du_gout.html">
+                        <a class="restaurants-orga-card" href="./la_palette_du_gout.html">
 
                             <div class="img-new">
                                 <div class="new">Nouveau</div>
@@ -100,7 +100,7 @@
                                 </div>
 
                             </div>
-                        </div>
+                        </a>
                     </li>
 
                     <li class="box">
