--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     <div class="spinner"></div>
 
 
-    <div class="le-reste-du-monde">
+    <main>
 
-        <header class="header-accueil">
-            <div class="header-logo">
+        <header class="header_accueil">
+            <div class="header__logo">
                 <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
             </div>
         </header>
 
-        <form class="formulaire">
-            <span class="formulaire-localisation"><i class="fas fa-map-marker-alt"></i></span>
-            <input class="formulaire-recherche" type="text" value="" placeholder="Paris, Belleville" />
+        <form class="localisation">
+            <span class="localisation__icone"><i class="fas fa-map-marker-alt"></i></span>
+            <input class="localisation__recherche" type="text" value="" placeholder="Paris, Belleville" />
         </form>
 
-        <section class="reservation">
+        <section class="presentation">
             <h1>Réservez le menu qui</br> vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <a><button>Explorer nos restaurants</button></a>
@@ -40,29 +40,24 @@
 
             <h1>Fonctionnement</h1>
 
-            <div class="fonctionnement-orga">
+            <div class="fonctionnement_orga">
 
-                <div class="box fonctionnement-box">
-                    <a href="#">
-                        <p class="fonctionnement-box-number">1</p>
-                        <span class="fonctionnement-box-icone"><i class="fas fa-mobile-alt"></i></span>
-                        <p class="fonctionnement-box-txt">Choisissez un restaurant</p>
-                    </a>
+                <div class="box fonctionnement__box">
+                    <p class="fonctionnement__number">1</p>
+                    <span class="fonctionnement__icone"><i class="fas fa-mobile-alt"></i></span>
+                    <p class="fonctionnement__text">Choisissez un restaurant</p>
                 </div>
-                <div class="box fonctionnement-box">
-                    <a href="#">
-                        <p class="fonctionnement-box-number">2</p>
-                        <span class="fonctionnement-box-icone"><i class="fas fa-ellipsis-v"></i><i
-                                class="fas fa-bars"></i></span>
-                        <p class="fonctionnement-box-txt">Composez votre menu</p>
-                    </a>
+
+                <div class="box fonctionnement__box">
+                    <p class="fonctionnement__number">2</p>
+                    <span class="fonctionnement__icone"><i class="fas fa-ellipsis-v"></i><i
+                            class="fas fa-bars"></i></span>
+                    <p class="fonctionnement__text">Composez votre menu</p>
                 </div>
-                <div class="box fonctionnement-box">
-                    <a href="#">
-                        <p class="fonctionnement-box-number">3</p>
-                        <span class="fonctionnement-box-icone"><i class="fas fa-store"></i></span>
-                        <p class="fonctionnement-box-txt">Dégustez au restaurant</p>
-                    </a>
+                <div class="box fonctionnement__box">
+                    <p class="fonctionnement__number">3</p>
+                    <span class="fonctionnement__icone"><i class="fas fa-store"></i></span>
+                    <p class="fonctionnement__text">Dégustez au restaurant</p>
                 </div>
             </div>
 
@@ -72,20 +67,20 @@
 
             <h1>Restaurants</h1>
 
-            <div class="restaurants-orga">
+            <div class="restaurants_orga">
 
                 <ul>
                     <li class="box">
-                        <a class="restaurants-orga-card" href="./la_palette_du_gout.html">
+                        <a class="restaurants__card" href="./la_palette_du_gout.html">
 
-                            <div class="img-new">
-                                <div class="new">Nouveau</div>
-                                <img class="restaurants-orga-card-image1"
+                            <div class="restaurants__image">
+                                <div class="restaurants__nouveau">Nouveau</div>
+                                <img class="restaurants__image--layout"
                                     src="./images/restaurants/la-palette-du-gout.jpg"
                                     alt="La palette du goût" />
                             </div>
 
-                            <div class="restaurants-orga-card-texte">
+                            <div class="restaurants__texte">
                                 <div>
                                     <h2>La palette du goût</h2>
                                     <p>Ménilmontant</p>
@@ -101,16 +96,16 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants-orga-card" href="./la-note-enchantee.html">
+                        <a class="restaurants__card" href="./la-note-enchantee.html">
 
-                            <div class="img-new">
-                                <div class="new">Nouveau</div>
-                                <img class="restaurants-orga-card-image2"
+                            <div class="restaurants__image">
+                                <div class="restaurants__nouveau">Nouveau</div>
+                                <img class="restaurants__image--layout"
                                     src="./images/restaurants/La-note-enchantee.jpg"
                                     alt="La note enchantée" />
                             </div>
 
-                            <div class="restaurants-orga-card-texte">
+                            <div class="restaurants__texte">
                                 <div>
                                     <h2>La note enchantée</h2>
                                     <p>Charonne</p>
@@ -126,11 +121,13 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants-orga-card" href="./a-la francaise.html">
-                            <img class="restaurants-orga-card-image"
+                        <a class="restaurants__card" href="./a-la francaise.html">
+
+                            <img class="restaurants__image--layout"
                                 src="./images/restaurants/a-la-francaise.jpg"
                                 alt="A la française" />
-                            <div class="restaurants-orga-card-texte">
+
+                            <div class="restaurants__texte">
                                 <div>
                                     <h2>A la française</h2>
                                     <p>Cité Rouge</p>
@@ -146,11 +143,13 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants-orga-card" href="./le-delice-des-sens.html">
-                            <img class="restaurants-orga-card-image"
+                        <a class="restaurants__card" href="./le-delice-des-sens.html">
+
+                            <img class="restaurants__image--layout"
                                 src="./images/restaurants/le-delice-des-sens.jpg"
                                 alt="Le délice des sens" />
-                            <div class="restaurants-orga-card-texte">
+
+                            <div class="restaurants__texte">
                                 <div>
                                     <h2>Le délice des sens</h2>
                                     <p>Folie-Méricourt</p>
@@ -169,16 +168,16 @@
         </section>
 
         <footer class="footer">
-            <div class="footer-logo">
+            <div class="footer__logo">
                 <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
             </div>
 
-            <div class="footer-info">
+            <div class="footer__info">
                 <span><i class="fas fa-utensils"></i></span>
                 <p>Proposer un restaurant</p>
             </div>
 
-            <div class="footer-info">
+            <div class="footer__info">
                 <span><i class="fas fa-hands-helping"></i></span>
                 <p>Devenir partenaire</p>
             </div>
@@ -193,7 +192,7 @@
 
         </footer>
 
-    </div>
+    </main>
 
 
 </body>
