responsive page home

--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 
     <main>
 
-        <header class="header_accueil">
-            <div class="header__logo">
-                <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
-            </div>
-        </header>
+        <div class="header_responsive">
 
-        <form class="localisation">
-            <span class="localisation__icone"><i class="fas fa-map-marker-alt"></i></span>
-            <input class="localisation__recherche" type="text" value="" placeholder="Paris, Belleville" />
-        </form>
+            <header class="header_home">
+                <div class="header__logo">
+                    <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
+                </div>
+            </header>
+
+            <form class="localisation">
+                <span class="localisation__icone"><i class="fas fa-map-marker-alt"></i></span>
+                <input class="localisation__recherche" type="text" value="" placeholder="Paris, Belleville" />
+            </form>
+
+        </div>
 
         <section class="presentation">
             <h1>Réservez le menu qui</br> vous convient</h1>
@@ -173,21 +177,25 @@
             </div>
 
             <div class="footer__info">
-                <span><i class="fas fa-utensils"></i></span>
-                <p>Proposer un restaurant</p>
-            </div>
 
-            <div class="footer__info">
-                <span><i class="fas fa-hands-helping"></i></span>
-                <p>Devenir partenaire</p>
-            </div>
+                <div class="footer__info--layout">
+                    <span><i class="fas fa-utensils"></i></span>
+                    <p>Proposer un restaurant</p>
+                </div>
 
-            <div>
-                <p>Mentions légales</p>
-            </div>
+                <div class="footer__info--layout">
+                    <span><i class="fas fa-hands-helping"></i></span>
+                    <p>Devenir partenaire</p>
+                </div>
 
-            <div>
-                <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+                <div>
+                    <p>Mentions légales</p>
+                </div>
+
+                <div>
+                    <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+                </div>
+
             </div>
 
         </footer>
