responsive des pages menu

--- a/index.html
+++ b/index.html
@@ -176,27 +176,27 @@
                 <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
             </div>
 
-            <div class="footer__info">
+            <ul class="footer__info">
 
-                <div class="footer__info--layout">
+                <li class="footer__info--layout">
                     <span><i class="fas fa-utensils"></i></span>
                     <p>Proposer un restaurant</p>
-                </div>
+                </li>
 
-                <div class="footer__info--layout">
+                <li class="footer__info--layout">
                     <span><i class="fas fa-hands-helping"></i></span>
                     <p>Devenir partenaire</p>
-                </div>
+                </li>
 
-                <div>
+                <li>
                     <p>Mentions légales</p>
-                </div>
+                </li>
 
-                <div>
+                <li>
                     <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
-                </div>
+                </li>
 
-            </div>
+            </ul>
 
         </footer>
 
