--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -197,23 +197,27 @@
             <img src="./images/logo/ohmyfood.png" alt="Logo-Ohmyfood" />
         </div>
 
-        <div class="footer__info">
-            <span><i class="fas fa-utensils"></i></span>
-            <p>Proposer un restaurant</p>
-        </div>
+        <ul class="footer__info">
 
-        <div class="footer__info">
-            <span><i class="fas fa-hands-helping"></i></span>
-            <p>Devenir partenaire</p>
-        </div>
+            <li class="footer__info--layout">
+                <span><i class="fas fa-utensils"></i></span>
+                <p>Proposer un restaurant</p>
+            </li>
 
-        <div>
-            <p>Mentions légales</p>
-        </div>
+            <li class="footer__info--layout">
+                <span><i class="fas fa-hands-helping"></i></span>
+                <p>Devenir partenaire</p>
+            </li>
 
-        <div>
-            <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
-        </div>
+            <li>
+                <p>Mentions légales</p>
+            </li>
+
+            <li>
+                <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+            </li>
+
+        </ul>
 
     </footer>
 
