modif après validation W3C

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
 
         <section class="presentation">
-            <h1>Réservez le menu qui</br> vous convient</h1>
+            <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a><button>Explorer nos restaurants</button></a>
+            <button>Explorer nos restaurants</button>
         </section>
 
         
@@ -100,7 +100,7 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants__card" href="./la-note-enchantee.html">
+                        <a class="restaurants__card" href="./la_note_enchantee.html">
 
                             <div class="restaurants__image">
                                 <div class="restaurants__nouveau">Nouveau</div>
@@ -125,7 +125,7 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants__card" href="./a-la francaise.html">
+                        <a class="restaurants__card" href="./a_la_francaise.html">
 
                             <img class="restaurants__image--layout"
                                 src="./images/restaurants/a-la-francaise.jpg"
@@ -147,7 +147,7 @@
                     </li>
 
                     <li class="box">
-                        <a class="restaurants__card" href="./le-delice-des-sens.html">
+                        <a class="restaurants__card" href="./le_delice_des_sens.html">
 
                             <img class="restaurants__image--layout"
                                 src="./images/restaurants/le-delice-des-sens.jpg"
