--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -22,9 +22,9 @@
         </div>
     </header>
 
-    <section class="cover-image">
-        <img src="./images/restaurants/la-palette-du-gout.jpg"/>
-    </section>
+    <aside class="cover-image">
+        <img src="./images/restaurants/la-palette-du-gout.jpg" alt="cover-image"/>
+    </aside>
 
     <section class="menu">
 
