amélioration des animations

--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
 
                 <div class="box fonctionnement__box">
                     <p class="fonctionnement__number">2</p>
-                    <span class="fonctionnement__icone"><i class="fas fa-ellipsis-v"></i><i
-                            class="fas fa-bars"></i></span>
+                    <span class="fonctionnement__icone">
+                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-bars"></i>
+                    </span>
                     <p class="fonctionnement__text">Composez votre menu</p>
                 </div>
+                
                 <div class="box fonctionnement__box">
                     <p class="fonctionnement__number">3</p>
                     <span class="fonctionnement__icone"><i class="fas fa-store"></i></span>
