dernières modifs avant soutenance

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -30,7 +30,7 @@
 
         <div class="menu__title">
             <h3>À la française</h3>
-            <div href="./a_la_francaise.html" class="heart">
+            <div class="heart">
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
             </div>
