--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -60,7 +60,7 @@
                     
 
 
-                <a href="#" class="box card card--2"> 
+                <a href="#card--2" class="box card card--2"> 
                     <div class="card__description">
                         <h5>Velouté de légumes d'antan</h5>
                         <p>Carotte, panais, topinambour</p>
@@ -73,7 +73,7 @@
                 </a>
 
                 
-                <a href="#" class="box card card--3"> 
+                <a href="#card--3" class="box card card--3"> 
                     <div class="card__description">
                         <h5>Soupe à l'oignon</h5>
                         <p>Revisitée</p>
